[workspace]
members = [
  "mock-builder",
]
resolver = "2"

[workspace.package]
authors = ["Centrifuge <admin@centrifuge.io>"]
edition = "2021"
repository = "https://github.com/foss3/runtime-pallet-library"
homepage = "https://foss3.github.io/runtime-pallet-library"
description = "Runtime pallets and utilities for Substrate based chains"
license = "LGPL-3.0"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = { version = "2.3.0", features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
